--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   jose: '>=0.1.2 <0.3.0'
   dotenv: ^2.0.0
   openid_client: ^0.4.0
-  firebase_dart: ^0.7.15+3
+  firebase_dart: 0.7.15+4
   path: ^1.6.4
   meta: ^1.1.6
   http: ^0.13.0
