--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   clock: ^1.0.0
   x509: ^0.1.0
-  jose: '>=0.1.2 <0.3.0'
+  jose: ^0.3.2
   dotenv: ^2.0.0
   openid_client: ^0.4.0
   firebase_dart: 1.0.0-dev.33
