--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   path: ^1.6.4
   meta: ^1.1.6
   http: ^0.13.0
-  crypto_keys: ^0.1.0
+  crypto_keys: '>=0.2.0 <0.4.0'
   collection: ^1.14.11
   gcloud: '>=0.6.3 <0.8.0'
 
