--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   http: ^0.13.0
   crypto_keys: '>=0.2.0 <0.4.0'
   collection: ^1.14.11
-  gcloud: '>=0.6.3 <0.8.0'
+  gcloud: ^0.8.0
 
 dev_dependencies:
   test: ^1.0.0
